@@ -1,4 +1,4 @@
-/* $Id: sctrl.c,v 1.13 2004/01/20 01:40:19 ekohl Exp $
+/* $Id: sctrl.c,v 1.14 2004/08/15 17:03:15 chorns Exp $
  * 
  * COPYRIGHT:       See COPYING in the top level directory
  * PROJECT:         ReactOS system libraries
@@ -12,12 +12,7 @@
 
 /* INCLUDES ******************************************************************/
 
-#define NTOS_MODE_USER
-#include <ntos.h>
-#include <windows.h>
-#include <string.h>
-#include <wchar.h>
-
+#include "advapi32.h"
 #define NDEBUG
 #include <debug.h>
 
